# paper2notebook

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
.claude/skills/dev/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/walkthrough/: SKILL.md
.github/workflows/: cd.yml  ci.yml
backend/: arxiv_fetcher.py  main.py  notebook_builder.py  notebook_generator.py  output_validator.py  pdf_parser.py  prompts.py  pyproject.toml  requirements-prod.txt  requirements.txt  sanitizer.py
backend/tests/: conftest.py  test_arxiv_fetcher.py  test_auth_header.py  test_cd_workflow.py  test_ci_workflow.py  test_dependency_pinning.py  test_docker_compose.py  test_dockerfile_backend.py  test_dockerfile_frontend.py  test_error_handling.py  test_generate.py  test_hardened_prompts.py  test_health.py  test_notebook_builder.py  test_notebook_generator.py  test_output_validator.py  test_pdf_parser.py  test_pdf_validation.py  test_rate_limiting.py  test_sanitizer.py  test_security_headers.py  test_security_integration.py  test_sse_generate.py  test_terraform.py
frontend/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: api-key-input.tsx  arxiv-input.tsx  header.tsx  history-panel.tsx  pdf-upload.tsx  processing-view.tsx  result-view.tsx  (+4 more)
infra/: alb.tf  ecr.tf  ecs.tf  main.tf  outputs.tf  variables.tf  vpc.tf
sprints/v1/: PRD.md  TASKS.md  WALKTHROUGH.md
sprints/v2/: PRD.md  TASKS.md  WALKTHROUGH.md
sprints/v3/: PRD.md  TASKS.md  WALKTHROUGH.md
(+20 files in other folders)
