[project]
name = "paper2notebook-backend"
version = "0.1.0"
description = "Backend for Paper2Notebook — converts research papers to Jupyter notebooks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "pymupdf>=1.25.0",
    "nbformat>=5.10.0",
    "openai>=1.60.0",
    "sse-starlette>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
